--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body, html {
 /* Position text in the middle of the page/image */
 .bg-text {
   color: black;
-  font-weight: bold;
+  font-weight: normal;
   position: absolute;
   top: 50%;
   left: 50%;
